fix: revert FAB layout to vertical stack on mobile and increased size

--- a/client/src/Components/Home/Home.css
+++ b/client/src/Components/Home/Home.css
@@ -514,8 +514,8 @@
   }
 
   .fab-button {
-    width: 52px;
-    height: 52px;
+    width: 75px;
+    height: 75px;
     display: flex !important;
     visibility: visible !important;
     opacity: 1 !important;
